<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:scrollbars="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_logo"
            android:visibility="visible" />

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_usu_rio" />
        <!-- Radio User Type -->
        <RadioGroup
            android:id="@+id/rg_user_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_contributor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/comum" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_ong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="140dp"
                android:text="@string/organiza_o" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/ong_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- CNPJ Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_cnpj"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnpj"
                    android:layout_gravity="center"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <!-- ENDERECO Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_endereco"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/endere_o"
                    android:layout_gravity="center"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <!-- FONE Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_fone"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fone"
                    android:layout_gravity="center"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contributor_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- CPF Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_cpf"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:layout_gravity="center"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/criar_conta"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/voltar_ao_login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>
